--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,16 @@
 body {
   background: url("https://www.mediafire.com/convkey/221d/tia1abtc2ro0kem9g.jpg");
+
   background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  height: 100%;
+  width: 100%;
+  margin: 0;
 }
